Slight change files organization on DTOs related to authentication. Updated Swagger documentation in swagger_doc.yaml.
